--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,10 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
+Hello, I am Zhentao Wang!
 
 title: Edit _config.yml to set your title!
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
+description: Currently I am learning ELEC4630 Course!❤
 github_username: jph00
 
-# Email and twitter are optional:
-email:
-twitter_username:
+email:zhentao.wang@uq.net.au
 
 # Set this to true to get LaTeX math equation support
 use_math:
