--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 Hello, I am Zhentao Wang!
 
-title: Edit _config.yml to set your title!
+title: Hi! This is Zhentao Wang's blog!
 description: Currently I am learning ELEC4630 Course!❤
 github_username: jph00
 
