--- a/_config.yml
+++ b/_config.yml
@@ -6,21 +6,7 @@ github_username: jph00
 
 email:zhentao.wang@uq.net.au
 
-# Set this to true to get LaTeX math equation support
-use_math:
-
-# Add your Google Analytics ID here if you have one and want to use it
-google_analytics:
-
-# Everything below here can be ignored, unless you want to change the theme entirely
-theme: minima
-plugins:
-  - jekyll-feed
-  - jekyll-gist
-  - jekyll-octicons
-  - jekyll-github-metadata
-
-titles_from_headings:
+titles_from_headings: Zhentao Wang's blog!
   enabled:     true
   strip_title: true
   collections: true
